--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,32 @@ html{
   font-size: 20px;
   background-color: rgb(192, 185, 185);
 }
+
+
+
+.container{
+background-color: indigo;
+font-family: "Oswald",sans-serif;
+font-size: 1rem;
+min-height: 2.75rem;
+display: flex;
+align-items: center;
+padding: 0 1rem;
+}
+
+
+
+.item,
+.last-item
+{
+color: #ebebeb;
+text-decoration: none;
+
+}
+.item{
+  margin-right: 1rem;
+}
+.last-item{
+
+  margin-left: auto;
+}
