--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,7 @@ html{
   font-size: 20px;
   background-color: rgb(192, 185, 185);
 }
-
-
-
-.container{
+  .container{
 background-color: indigo;
 font-family: "Oswald",sans-serif;
 font-size: 1rem;
@@ -33,3 +30,11 @@ text-decoration: none;
 
   margin-left: auto;
 }
+
+
+
+figure {
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+ }
